--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Flask-Mail==0.10.0
 Flask-SQLAlchemy==3.1.1
 fonttools==4.58.4
 greenlet==3.1.1
+gunicorn==23.0.0
 isort==5.13.2
 itsdangerous==2.2.0
 Jinja2==3.1.5
